[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/EndingLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Ending.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.470588, 0.117647, 0.372549, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.372549, 0.313726, 0.341176, 1 )

[node name="Ending" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Tween" type="Tween" parent="."]

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" parent="Buttons" instance=ExtResource( 4 )]
margin_left = 496.0
margin_top = 952.0
margin_right = 896.0
margin_bottom = 1012.0
rect_min_size = Vector2( 400, 60 )
rect_pivot_offset = Vector2( 360, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "main menu"

[node name="ExitButton" parent="Buttons" instance=ExtResource( 4 )]
margin_left = 1048.0
margin_top = 952.0
margin_right = 1448.0
margin_bottom = 1012.0
rect_min_size = Vector2( 400, 60 )
rect_pivot_offset = Vector2( 360, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "exit"
[connection signal="pressed" from="Buttons/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
